Dynamic routing for the blog and ending the blog

--- a/app/styles/blog.css
+++ b/app/styles/blog.css
@@ -16,6 +16,11 @@
     }
 }
 
+.post{
+    max-width: 80rem;
+    margin: 0 auto;
+}
+
 .post .contenido{
  padding: 1.5rem;   
 }
@@ -36,4 +41,13 @@
 .post .fecha{
     font-size: 1.6rem;
     color: var(--primary)
+}
+
+.post .texto{
+    white-space: pre-wrap;
+    text-align: justify;
+}
+
+.mt-3{
+    margin-top: 3rem;
 }
