--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -65,6 +65,7 @@
     display: flex;
     gap: 2rem;
     margin-top: 5rem;
+    align-items: center;
   }
 
   @media(min-width: 768px){
@@ -82,6 +83,10 @@
     padding: .5rem;
     transition-property: background-color;
     transition-duration: 300ms;
+  }
+
+  .header .navegacion img{
+    width: 3rem;
   }
 
   .header .navegacion a:hover, .header .active{
@@ -133,6 +138,10 @@
     font-size: 2.4rem;
     text-align: center;
     margin-top: 5rem;
+  }
+
+  .footer .navegacion a:last-of-type{
+    display: none;
   }
 
   .error-enlace{
