--- a/app/styles/carrito.css
+++ b/app/styles/carrito.css
@@ -30,6 +30,7 @@
     align-items: center;
     padding: 3rem 0;
     border-bottom: 1px solid #cfcfcf; 
+    position: relative;
 }
 
 .select{
@@ -68,3 +69,15 @@
 .subtotal{
     font-size: 2.2rem;
 }
+
+.btn_eliminar{
+    all: unset;
+    position: absolute;
+    top: 3rem;
+    right: 1rem;
+}
+
+.btn_eliminar:hover{
+    cursor: pointer;
+}
+
